# SolStake

./: .gitignore  Cargo.toml  README.md
client/: client.ts  package-lock.json  package.json
src/: entrypoint.rs  instruction.rs  processor.rs  state.rs
